fix PIRATE-4434, remove duplicated basket template widget and tweak style for basket on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -52,10 +52,9 @@ body {
     padding: 2.5em 0 1.5em;
     margin: 0 auto;
     @media @mobile {
-        padding: 2.5em 1.2em 1.5em;
+        padding: 1.5em 1.2em;
     }
     .companyheader {
-        float: none;
         .logo, .companyname {
             float: left;
         }
@@ -82,40 +81,41 @@ body {
             }
         } 
         @media @mobile {
-            float: none;
-            width: auto;
+            float: inherit;
+            width: 100%;
             margin: 0 auto;
-            text-align: center;
-            display: table;
         }
     }/* end companyheader */
 }   /* end HEADER */
 
+.brand {
+    @media @mobile {
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-align-content: center;
+        -ms-flex-line-pack: center;
+        align-content: center;
+        -webkit-align-items: center;
+        -ms-flex-align: center;
+        align-items: center;
+
+        margin-bottom: 1em;
+    }
+}
 
 /* ===============================
   ECOM - BASKET
    =============================== */
-
-.main .widget.ecombasket {
-    float: left;
-    width: 100%;
-    z-index: 2;
-    .ecombasket-pull {
-        background-color: @font-swatch7-background-color;
-        position: relative;
-    }
-    .ecombasket-list-container {
-        margin-top: 5px;
-        left: 0;
-        right:0;
-        position: relative;
-        ul li .ecombasket-item-image {
-            width: 56px;
-            height: 56px;
-            margin-right: 20px;
-        }
-    }
-}
 
 a.btn.ecombasket-summary-link {
     display: inline-block;
@@ -132,27 +132,19 @@ a.btn.ecombasket-summary-link {
 
 .top-basket-container {
     @media @mobile {
-        display: none;
+        width: 100%;
+        display: inline-block;
     }
 }
-
-.mobile-basket-container {
-    display: none;
-    @media @mobile {
-        display: block;
-        width: 100%;
-        float: left;
-        margin-bottom: 20px;
-    }
-}   
 
 .widget.ecombasket {
     float: right;
     width: 240px;
     z-index: 3;
     @media @mobile {
+        float: inherit;
         width: 100%;
-        float: none;
+        display: inline-block;
     }
     .ecombasket-pull {
         width: 150px;
@@ -165,6 +157,7 @@ a.btn.ecombasket-summary-link {
             position: relative;
             width:100%;
             text-align: center;
+            padding: 7px;
         }
         p, .basket-count {
             color: @font-swatch7-color;
@@ -233,7 +226,6 @@ a.btn.ecombasket-summary-link {
             left: 0;
         }
         @media @mobile {
-            position: relative;
             border: 2px solid lighten(@color-swatch5,15%);
             background-color: @color-swatch1;
             right: 0;
